================================================================================
Changes since v11.11
================================================================================

--------------------------------------------------------------------------------
Global changes:

  -- turned on "Wall" compiler switch to display all GCC warnings
  -- resolved a number of "sign compare" warning associated with comparing
     "unsigned int" with "int".


--------------------------------------------------------------------------------
basic



--------------------------------------------------------------------------------
basicGL



--------------------------------------------------------------------------------
dis

   EmissionPduHandler class
      1) isUpdateRequired() -- changed the system transmitting check from
         RfSystem::isTransmitterEnabled() to RfSystem::isTransmitting()

--------------------------------------------------------------------------------
ioDevice


--------------------------------------------------------------------------------
simulation

   Missile class
       1) fuzing logic is reset if missile's target changes mid-flight
